fix toast z-index

--- a/other/toast.css
+++ b/other/toast.css
@@ -9,6 +9,7 @@
 
 .notifications {
   position: fixed;
+  z-index: 1000;
   bottom: 30px;
   right: 20px;
 }
@@ -19,6 +20,7 @@
 .notifications .toast {
   width: 400px;
   position: relative;
+  z-index: 1000;
   overflow: hidden;
   list-style: none;
   border-radius: 4px;
